# sts-playground

./: .gitignore  GameStateRepresentationLearning.ipynb  README.md  mypy.ini  play.py  pyproject.toml
data/: utils.py
notebooks/: autoencoder_analysis.ipynb
sts_playground/: utils.py
sts_playground/agents/: random.py
sts_playground/autoencoder/: ds_lib.py  sweep_tf.py  tf_lib.py  train.py  train_tf.py  utils.py
sts_playground/state_predictor/: train.py
sts_playground/training/: callbacks.py  train.py
