[tool.poetry]
name = "sts-playground"
version = "0.1.0"
description = ""
authors = ["Zeus Kronion <kronion@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.25.1"
gym-sts = {path = "../gym-sts", develop = true}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
