[tool.poetry]
name = "sts-playground"
version = "0.1.0"
description = ""
authors = ["Zeus Kronion <kronion@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
gym-sts = {path = "../gym-sts", develop = true}
ray = {extras = ["rllib"], version = "^2.0.1"}
gym = "^0.23.1"
absl-py = "^1.3.0"
fancyflags = "^1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
