[tool.poetry]
name = "sts-playground"
version = "0.1.0"
description = ""
authors = ["Zeus Kronion <kronion@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
gym-sts = {path = "../gym-sts", develop = true}
ray = {extras = ["rllib"], version = "^2.0.1"}
gym = "^0.23.1"
absl-py = "^1.3.0"
fancyflags = "^1.1"
torch = "^1.13.1"
wandb = "^0.13.5"
poethepoet = "^0.18.1"
dm-tree = "^0.1.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
mypy = "^0.982"
jupyterlab = "^3.5.2"
tqdm = "^4.64.1"

[tool.poe.tasks]
rl_train = "python -m sts_playground.autoencoder.train"
autoencoder_train = "python -m sts_playground.autoencoder.train"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
